--- a/em-app/Cargo.toml
+++ b/em-app/Cargo.toml
@@ -15,6 +15,7 @@ keywords = [ "sgx" ]
 hyper = { version = "0.10", default-features = false }
 mbedtls = { version = "0.7", default-features = false, features = ["sgx"] }
 b64-ct = "0.1.0"
+rustc-serialize = { version = "0.3.24", git = "https://github.com/jethrogb/rustc-serialize.git", branch = "portability" }
 serde_bytes = "0.10"
 serde_json = "1.0"
 sgx-isa = { version="0.3", features=["sgxstd"], default-features=false }
